--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="featured-property">
       <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-        <figcaption></figcaption>
+        <figcaption>345 Carl Street, Apt 12, Brooklyn, NY - Photo by Brad Pitt.</figcaption>
       </figure>
       <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
